--- a/dev/_modules/smac/stats/stats.html
+++ b/dev/_modules/smac/stats/stats.html
@@ -304,6 +304,9 @@
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Save all relevant attributes to json-dictionary.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">__scenario</span><span class="o">.</span><span class="n">output_dir</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;No scenario.output_dir: not saving stats!&quot;</span><span class="p">)</span>
+            <span class="k">return</span>
         <span class="c1"># Set used_wallclock_time</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">wallclock_time_used</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_used_wallclock_time</span><span class="p">()</span>
 
