--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -784,7 +784,9 @@
 </li>
       <li><a href="apidoc/smac.utils.io.traj_logging.html#smac.utils.io.traj_logging.TrajLogger.read_traj_aclib_format">read_traj_aclib_format() (smac.utils.io.traj_logging.TrajLogger static method)</a>
 </li>
-      <li><a href="apidoc/smac.smac_cli.html#smac.smac_cli.SMACCLI.restore_state">restore_state() (smac.smac_cli.SMACCLI method)</a>
+      <li><a href="apidoc/smac.smac_cli.html#smac.smac_cli.SMACCLI.restore_state_after_scen">restore_state_after_scen() (smac.smac_cli.SMACCLI method)</a>
+</li>
+      <li><a href="apidoc/smac.smac_cli.html#smac.smac_cli.SMACCLI.restore_state_before_scen">restore_state_before_scen() (smac.smac_cli.SMACCLI method)</a>
 </li>
       <li><a href="apidoc/smac.epm.rf_with_instances.html#smac.epm.rf_with_instances.RandomForestWithInstances.rf">rf (smac.epm.rf_with_instances.RandomForestWithInstances attribute)</a>
 </li>
@@ -1197,7 +1199,11 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.optimizer.pSMAC.html#smac.optimizer.pSMAC.write">write() (in module smac.optimizer.pSMAC)</a>
+
+      <ul>
+        <li><a href="apidoc/smac.scenario.scenario.html#smac.scenario.scenario.Scenario.write">(smac.scenario.scenario.Scenario method)</a>
 </li>
+      </ul></li>
       <li><a href="apidoc/smac.utils.io.output_writer.html#smac.utils.io.output_writer.OutputWriter.write_inst_features_file">write_inst_features_file() (smac.utils.io.output_writer.OutputWriter method)</a>
 </li>
       <li><a href="apidoc/smac.utils.io.output_writer.html#smac.utils.io.output_writer.OutputWriter.write_inst_file">write_inst_file() (smac.utils.io.output_writer.OutputWriter method)</a>
