Pushing the docs for revision for branch: development, commit 2769d9808c046878488c13e2d23536d27176378d, folder: dev

--- a/dev/_modules/smac/facade/roar_facade.html
+++ b/dev/_modules/smac/facade/roar_facade.html
@@ -340,16 +340,18 @@
 
         <span class="c1"># use SMAC facade</span>
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span>
-                         <span class="n">scenario</span><span class="o">=</span><span class="n">scenario</span><span class="p">,</span>
-                         <span class="n">tae_runner</span><span class="o">=</span><span class="n">tae_runner</span><span class="p">,</span>
-                         <span class="n">runhistory</span><span class="o">=</span><span class="n">runhistory</span><span class="p">,</span>
-                         <span class="n">intensifier</span><span class="o">=</span><span class="n">intensifier</span><span class="p">,</span>
-                         <span class="n">model</span><span class="o">=</span><span class="n">model</span><span class="p">,</span>
-                         <span class="n">runhistory2epm</span><span class="o">=</span><span class="n">runhistory2epm</span><span class="p">,</span>
-                         <span class="n">initial_design</span><span class="o">=</span><span class="n">initial_design</span><span class="p">,</span>
-                         <span class="n">initial_configurations</span><span class="o">=</span><span class="n">initial_configurations</span><span class="p">,</span>
-                         <span class="n">stats</span><span class="o">=</span><span class="n">stats</span><span class="p">,</span>
-                         <span class="n">rng</span><span class="o">=</span><span class="n">rng</span><span class="p">)</span></div>
+            <span class="n">scenario</span><span class="o">=</span><span class="n">scenario</span><span class="p">,</span>
+            <span class="n">tae_runner</span><span class="o">=</span><span class="n">tae_runner</span><span class="p">,</span>
+            <span class="n">runhistory</span><span class="o">=</span><span class="n">runhistory</span><span class="p">,</span>
+            <span class="n">intensifier</span><span class="o">=</span><span class="n">intensifier</span><span class="p">,</span>
+            <span class="n">model</span><span class="o">=</span><span class="n">model</span><span class="p">,</span>
+            <span class="n">runhistory2epm</span><span class="o">=</span><span class="n">runhistory2epm</span><span class="p">,</span>
+            <span class="n">initial_design</span><span class="o">=</span><span class="n">initial_design</span><span class="p">,</span>
+            <span class="n">initial_configurations</span><span class="o">=</span><span class="n">initial_configurations</span><span class="p">,</span>
+            <span class="n">stats</span><span class="o">=</span><span class="n">stats</span><span class="p">,</span>
+            <span class="n">rng</span><span class="o">=</span><span class="n">rng</span><span class="p">,</span>
+            <span class="n">run_id</span><span class="o">=</span><span class="n">run_id</span><span class="p">,</span>
+        <span class="p">)</span></div>
 </pre></div>
 
            </div>
