--- a/dev/_modules/smac/initial_design/multi_config_initial_design.html
+++ b/dev/_modules/smac/initial_design/multi_config_initial_design.html
@@ -338,6 +338,9 @@
 <span class="sd">            Initial incumbent configuration</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">configs</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">configs</span>
+        <span class="k">for</span> <span class="n">config</span> <span class="ow">in</span> <span class="n">configs</span><span class="p">:</span>
+            <span class="k">if</span> <span class="n">config</span><span class="o">.</span><span class="n">origin</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
+                <span class="n">config</span><span class="o">.</span><span class="n">origin</span> <span class="o">=</span> <span class="s1">&#39;Initial design&#39;</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">traj_logger</span><span class="o">.</span><span class="n">add_entry</span><span class="p">(</span><span class="n">train_perf</span><span class="o">=</span><span class="mi">2</span><span class="o">**</span><span class="mi">31</span><span class="p">,</span>
                                    <span class="n">incumbent_id</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span>
