--- a/dev/_modules/smac/initial_design/random_configuration_design.html
+++ b/dev/_modules/smac/initial_design/random_configuration_design.html
@@ -307,7 +307,9 @@
 <span class="sd">        config: Configuration()</span>
 <span class="sd">            Initial incumbent configuration</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">scenario</span><span class="o">.</span><span class="n">cs</span><span class="o">.</span><span class="n">sample_configuration</span><span class="p">()</span></div>
+        <span class="n">config</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">scenario</span><span class="o">.</span><span class="n">cs</span><span class="o">.</span><span class="n">sample_configuration</span><span class="p">()</span>
+        <span class="n">config</span><span class="o">.</span><span class="n">origin</span> <span class="o">=</span> <span class="s1">&#39;Random initial design.&#39;</span>
+        <span class="k">return</span> <span class="n">config</span></div>
 </pre></div>
 
            </div>
