Pushing the docs for revision for branch: development, commit 548fd8c8165bd0efff0967e6ebe47d6390888168, folder: dev

--- a/dev/_modules/smac/facade/smac_facade.html
+++ b/dev/_modules/smac/facade/smac_facade.html
@@ -376,6 +376,7 @@
 
         <span class="n">aggregate_func</span> <span class="o">=</span> <span class="n">average_cost</span>
 
+        <span class="bp">self</span><span class="o">.</span><span class="n">scenario</span> <span class="o">=</span> <span class="n">scenario</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">output_dir</span> <span class="o">=</span> <span class="n">create_output_directory</span><span class="p">(</span><span class="n">scenario</span><span class="p">,</span> <span class="n">run_id</span><span class="p">)</span>
         <span class="n">scenario</span><span class="o">.</span><span class="n">write</span><span class="p">()</span>
 
